--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cookie authentication with Next.js",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "build": "next build"
   },
   "author": "Manu",
   "license": "ISC",
